fix overlap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -302,7 +302,6 @@ html, body {
   -webkit-transition: all 0.4s ease-in-out 0s;
   -moz-transition: all 0.4s ease-in-out 0s;
   transition: all 0.4s ease-in-out 0s;
-  max-height:750px;
 }
 
 .content:hover .content-overlay{
